<?xml version="1.0"?>
<package>
  <name>joystick_node</name>
  <version>0.1.0</version>
  <description>The joystick_node package</description>
  <maintainer email="a.gkiokas@ortelio.co.uk">alex giokas</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>
