<?xml version="1.0"?>
<package>
  <name>motors</name>
  <version>0.1.0</version>
  <description>The motors package</description>
  <maintainer email="m.ramos@ortelio.co.uk"> Maria Ramos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
